# cp25_warehouse_automation

./: .gitignore  README.md
scripts/: clustering.py  detect_cart_rect.py  frames_2025-06-23_16.29.56.gv  glocalize_client.py  plot_scan.py  plot_scan2.py  plot_scan_filtered.py  robot_visualize.py  start_warehouse_automation.bash  test.bash
warehouse_automation_pkg/: CMakeLists.txt  package.xml
warehouse_automation_pkg/action/: Localize.action
warehouse_automation_pkg/launch/: glocalization_action_server.launch.py  warehouse_automation.launch.py  wh_automation_project.launch.py
warehouse_automation_pkg/src/: client_glocalization_as.cpp  global_localization.cpp  glocalization_as.cpp  test.cpp  test.py
warehouse_automation_pkg/srv/: GlobalLocalization.srv
